format create page and add stop button to timer popup

--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -98,7 +98,11 @@
             					</p>
         					</div>
         					<br>
+        					<div id="timer_button_holder">
         					<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer"> Start Timer </button>
+        					
+        					</div>
+
 	    				</div>
 	    			</li>
 	    			<li>
