--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -151,7 +151,7 @@
                 </div>
                     <div class="gallery-action">
                         <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted" id="hearted_{{recipe.id}}">favorite</i></a>
-                        <a href="{% url 'follow' recipe.id %}" class= "btn-floating btn-large waves-effect green"><i class="material-icons">check</i></a>
+                        <a href="{% url 'follow_steps' recipe.id %}" class= "btn-floating btn-large waves-effect green"><i class="material-icons">check</i></a>
                     </div>
                 </div>
             </div>
