Fixed ingredient drop down and alignment

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -27,7 +27,7 @@
 				<br>
 				<br>
 	            <div class="card-content">
-	               <ul class="stepper">
+	               <ul class="stepper" style="overflow: visible;">
 	               		<!-- Title -->
                   		<li class="step">
                      		<div  class="step-title waves-effect waves-dark">Recipe Title</div>
@@ -102,7 +102,7 @@
 												</div>
 											</td>   
 											<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
-											<td class="input-field col s10">
+											<td class="input-field">
 												<select name="unit">
 													<option value="" disabled selected>Choose the unit</option>
 													<option value="1" name="">cup(s)</option>
