--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -17,7 +17,7 @@
     <div class="Mnavbar">
         <div class="Mnav_container">
             <div class="logo">
-                <h1>logo</h1>
+                <img class="responsive-img logoimg" src={% static "main/img/recipetop_logo.PNG" %}>
             </div>
             <div class="time">
                 <h4 id="time"></h4>
