--- a/RecipeTop/main/static/main/scss/menu.scss
+++ b/RecipeTop/main/static/main/scss/menu.scss
@@ -27,11 +27,15 @@ $shadow_blue:#005fb3;
        .logo{
         width:100%;
         height:100%;
-           display:flex;
-           align-content: flex-end;
-           justify-content: center;
-           padding-left: 230px;
+        display:flex;
+        align-content: flex-end;
+        justify-content: center;
+        padding-left: 230px;
 
+        .logoimg{
+          width: 400px;
+          height: 112px;
+        }
        }
        .time{
 
