--- a/RecipeTop/main/static/main/scss/menu.scss
+++ b/RecipeTop/main/static/main/scss/menu.scss
@@ -8,6 +8,38 @@ body{
 
 $shadow_blue:#005fb3;
 
+icon-teal-lightest{
+  color:#80cbc4;
+}
+
+.link-teal-lightest{
+  color:#80cbc4;
+  width: 60%;
+  padding-top: 6px;
+  padding-bottom: 6px;
+
+
+}
+.link-home{
+  color:#000000;
+
+
+
+}
+
+.icon-teal-dark{
+  color:#4db6ac;
+}
+
+.link-teal-dark{
+  color:#4db6ac;
+  width: 60%;
+  padding-top: 6px;
+  padding-bottom: 6px;
+
+
+}
+
 .Mnavbar{
     position: fixed;
     height:13vh;
