--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -17,7 +17,9 @@
     <div class="Mnavbar">
         <div class="Mnav_container">
             <div class="logo">
+                <a href={% url 'Home' %}>
                 <img class="responsive-img logoimg" src={% static "main/img/recipetop_logo.PNG" %}>
+                </a>
             </div>
             <div class="time">
                 <h4 id="time"></h4>
@@ -33,28 +35,34 @@
         </div>
         <ul class="collapsible">
             <li>
+                <a href={% url 'Home' %} class="link-home">
+                <div class="collapsible-header teal lighten-3"><i class="material-icons">home</i>Home</div>
+                </a>
+                
+            </li>
+            <li>
                 <div class="collapsible-header teal lighten-2">
                     <i class="material-icons">assignment</i>Recipes
                 </div>
+                
                 <div class="collapsible-body teal lighten-3">
-                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1">create<i class="material-icons blue-grey darken-1">create</i></a>
+                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
                         <br>
                         <br>
-                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1">search<i class="material-icons blue-grey darken-1">search</i></a>
+                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Search<i class="material-icons icon-teal-lightest">search</i></a>
                         <br>
                         <br>
-                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1">favorite<i class="material-icons blue-grey darken-1">favorite</i></a>
+                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
                 </div>
             </li>
+
             <li>
-                <div class="collapsible-header teal lighten-1"><i class="material-icons">place</i>Place holder</div>
-                <div class="collapsible-body teal lighten-2"><span></div>
-            </li>
-            <li>
-                <div class="collapsible-header teal darken-1"><i class="material-icons">account_circle</i>Account</div>
-                <div class="collapsible-body teal">
-                        <a href="" class="waves-effect active blue-grey darken-1">account<i class="material-icons">create</i></a>
-                        <a href="" class="waves-effect active blue-grey darken-1">settings<i class="material-icons">search</i></a>
+                <div class="collapsible-header teal lighten-1 "><i class="material-icons">account_circle</i>Account</div>
+                <div class="collapsible-body teal lighten-2">
+                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Account<i class="material-icons icon-teal-dark">account_circle</i></a>
+                        <br>
+                        <br>
+                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Settings<i class="material-icons icon-teal-dark">settings</i></a>
                 </div>
             </li>
         </ul>
