Create second timer popup and reposition pop up windows

--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -89,26 +89,35 @@
 	  			<ul>
 	    			<li>
 	    				<a class="btn-floating teal lighten-3">
-	    					<i class="material-icons" id="timer-drag-anywhere">timer</i>
+	    					<i class="material-icons" id="timer-1-drag-anywhere">timer</i>
 	    				</a>
-	    				<div  id="timer_modal_content">
-        					<div id="demo">          
+	    				<div  id="timer1_modal_content">
+        					<div id="demo1">          
           						<p class="range-field">
-                					<input type="range" id="test5" min="0" max="100" />	
+                					<input type="range" id="timer1" min="0" max="60" />	
             					</p>
         					</div>
         					<br>
-        					<div id="timer_button_holder">
-        					<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer"> Start Timer </button>
-        					
+        					<div id="timer_button_holder1">
+        						<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer1"> Start Timer </button>
         					</div>
-
 	    				</div>
 	    			</li>
 	    			<li>
 	    				<a class="btn-floating teal lighten-1">
-	    					<i class="material-icons" id="preheat-drag-anywhere">whatshot</i>
-	    					</a>
+	    					<i class="material-icons" id="timer-2-drag-anywhere">timer</i>
+	    				</a>
+	    				<div  id="timer2_modal_content">
+	    					<div id="demo2">        
+	          					<p class="range-field">
+	                					<input type="range" id="timer2" min="0" max="60" />	
+	            				</p>
+            				</div>
+        					<br>
+        					<div id="timer_button_holder2">
+        						<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer2"> Start Timer </button>
+        					</div>
+	    				</div>
 	    			</li>
 	    			<li>
 	    				<a class="btn-floating teal">
