Make search cards render with new hearted function

--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -103,6 +103,7 @@
 <div id="portfolio" class="section gray">
     <div class="container">
         <div class="gallery row">
+            <!--
             {% for recipe in hearted %}
 
             <div class="col l4 m6 s12 gallery-item gallery-expand gallery-filter polygon">
@@ -112,10 +113,10 @@
                     <img class="responsive-img" src="{{recipe.image.url}}">
                     {% else %}
                     <img class="responsive-img" src="http://placehold.it/350x250" alt="placeholder">
-                    <!-- <div class="circle">circle</div> -->
+                    
                     {% endif %}
                 </a>
-                <!-- card title -->
+                
                 <div class="gallery-header">
                     <div class="ingredient_title">
                         <span class= "title">{{recipe.title}}</span>
@@ -124,14 +125,14 @@
                     <div class="ingredient_props">
                         <div>
                             <i class="material-icons">library_books</i>
-                            <!-- <span><i class="material-icons hearted ">note</i>steps:{{recipe.steps.all.count}}</span> -->
+                            
                         </div>
                         <div class="prop2"><i class="material-icons hearted">schedule</i></div>
                         <div class="prop1"><i class="material-icons hearted ">local_dining</i></div>
                         <div class="prop2"><i class="material-icons hearted" id="hearted_{{recipe.id}}_prop">favorite</i></div>
                     </div>
                 </div>
-                <!-- inside the card stuff -->
+                
                 <div class="gallery-body">
                         <div class="title-wrapper">
                             <h3>{{recipe.title}} {% check_hearted recipe.id %}</h3>
@@ -159,6 +160,8 @@
             </div>
             {% endfor %}
 
+            -->
+
             {% for recipe in recipes %}
             <div class="col l4 m6 s12 gallery-item gallery-expand gallery-filter polygon">
                 <div class="gallery-curve-wrapper">
@@ -183,7 +186,7 @@
                        </div>
                         <div class="prop2"><i class="material-icons hearted">schedule</i></div>
                         <div class="prop1"><i class="material-icons hearted ">local_dining</i></div>
-                        <div class="prop2"><i class="material-icons hearted" id="hearted_{{recipe.id}}_prop">favorite_border</i></div>
+                        <div class="prop2"><i class="material-icons hearted" id="hearted_{{recipe.id}}_prop">{% check_hearted recipe.id %}</i></div>
                    </div>
                 </div>
                 <!-- inside the card stuff -->
@@ -207,7 +210,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo modi vel autem ducimus atque eligendi dolores repellat, temporibus, animi eum quis deserunt placeat exercitationem praesentium eaque at rerum aperiam soluta?</p>
                 </div>
                     <div class="gallery-action">
-                        <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted" id="hearted_{{recipe.id}}">favorite_border</i></a>
+                        <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted" id="hearted_{{recipe.id}}">{% check_hearted recipe.id %}</i></a>
                         <a href="{% url 'follow_steps' recipe.id %}" class= "btn-floating btn-large waves-effect green"><i class="material-icons">check</i></a>
                     </div>
                 </div>
