--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -47,12 +47,29 @@ body {
   flex-flow: column;
   padding-right: 1%;
   padding-left: 1%;
+  box-sizing: border-box;
+}
+.Micontainer .users .user:hover {
+  cursor: pointer;
 }
 .Micontainer .users .user .user_name {
   display: flex;
   justify-content: center;
   height: 30%;
   width: 100%;
+}
+.Micontainer .users .user .prefences {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  width: 100%;
+  height: 80%;
+  justify-items: center;
+  align-items: center;
+}
+.Micontainer .users .user .prefences img {
+  width: 50%;
+  height: 50%;
 }
 .Micontainer .users .user .user_profile {
   height: 100px;
@@ -84,9 +101,12 @@ body {
 }
 
 .animate {
-  filter: drop-shadow(2px 30px 3px rgba(0, 0, 0, 0.3));
-  border: 4px solid gold;
-  border-radius: 45%;
+  filter: drop-shadow(2px 12px 3px rgba(0, 0, 0, 0.3));
+}
+
+.border {
+  border: 1px solid gold;
+  border-radius: 15px;
 }
 
 .highlight {
@@ -105,6 +125,7 @@ body {
   }
   100% {
     transform: scale(1);
+    color: black;
   }
 }
 
