--- a/RecipeTop/main/static/main/scss/users.scss
+++ b/RecipeTop/main/static/main/scss/users.scss
@@ -68,6 +68,12 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
             // background-color:red;
             padding-right: 1%;
             padding-left:1%;
+            box-sizing: border-box;
+            
+            &:hover{
+                cursor:pointer;
+               
+            }
             .user_name{
                 display:flex;
                 justify-content: center;
@@ -78,6 +84,19 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
                 // .names{
                 //     font-weight: 400;
                 // }
+            }
+            .prefences{
+                margin:0 auto;
+                display:grid;
+                grid-template-columns: .5fr .5fr .5fr;
+                width:100%;
+                height:80%;
+                justify-items: center;
+                align-items: center;
+                img{
+                    width:50%;
+                    height:50%;
+                }
             }
 
 
@@ -130,10 +149,14 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
 
 
 .animate{
-    filter: drop-shadow(2px 30px 3px rgba(0, 0, 0, 0.3));
-    border: 4px solid gold;
-    border-radius: 45%;
+    filter: drop-shadow(2px 12px 3px rgba(0, 0, 0, 0.3));
+    // border: 4px solid gold;
+    // border-radius: 45%;
     // border-color: aqua;
+}
+.border{
+    border:1px solid gold;
+    border-radius: 15px;
 }
 
 .highlight{
@@ -151,7 +174,7 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
          }
          50%{
              transform:scale(1.05);
-             color:white;
+            //  color:white;
          }
          100%{
              transform: scale(1);
