--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -23,6 +23,14 @@
             <div class="user" id={{user.id}}>
                 <div class="user_profile" id={{user.id}}>
                 </div>
+                <div class="prefences">
+                    <img class="prefences_img"src="../../static/main/img/cheese 2.svg">
+                    <img class="prefences_img"src="../../static/main/img/steak.svg">
+                    <img class="prefences_img"src="../../static/main/img/fast-food.svg">
+                    <img class="prefences_img"src="../../static/main/img/cupcake.svg">
+                    <img class="prefences_img"src="../../static/main/img/broccoli (1).svg">
+                    <img class="prefences_img"src="../../static/main/img/apple (1).svg">
+                </div>
                 <div class='user_name'>
                         <h5 id={{user.id}} class="names">{{user.userName}}</h5>
                 </div>
@@ -77,7 +85,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Confirm</a>
     </div>
 </div>
 
