--- a/RecipeTop/main/static/main/scss/search.scss
+++ b/RecipeTop/main/static/main/scss/search.scss
@@ -27,11 +27,14 @@
 
 }
 
+.ingredients_table{
+  width: 100%;
+}
+.ingredient {
 
-.ingredient{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin:0 auto;
+}
+.content-wrapper {
+  padding-top: 40px;
 }
 
 .ingredient_title{
