--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -192,22 +192,35 @@
                 <!-- inside the card stuff -->
                 <div class="gallery-body">
                         <div class="title-wrapper">
-                          <h3>{{recipe.title}} {% check_hearted recipe.id %}</h3>
-                          <span class="price">steps:{{recipe.steps.all.count}}</span>
+                          <h3>{{recipe.title}}</h3>
+                        
                         </div>
-                        <h3>Ingredients</h3>
-                        <div class="ingredient">
-                        {% for ing in recipe.recipetoingredient_set.all %}
-                            <p>name: {{ing.ingredient.name}}</p>
-                            <p>unit: {{ing.unit}}</p>
-                            <p>quantity: {{ing.quantity}}</p>
-                        {% endfor %}
+                        <div class="content-wrapper">
+                            <p class="description">
+                                    {{recipe.description}}
+                            </p>
+                            <h4>Ingredients</h4>
+                            <div class="ingredient">
+                                <table class="ingredients_table">
+                                    <tr>
+                                    {% for ing in recipe.recipetoingredient_set.all %}
+                                    <td>
+                                        <label>
+                                            <input type="checkbox" value="{{ing.ingredient.name}}" name="ingredients"/>
+                                                <span>{{ing.quantity}} {{ing.get_unit}} {{ing.ingredient.name}}  </span>
+                                        </label>
+                                    </td>
+                                    {% cycle "" ""  "</tr><tr>" %}
+                                    {% endfor %}
+                                    </tr>
+
+                                </table>
+
+                            </div>
+
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo modi vel autem ducimus atque eligendi dolores repellat, temporibus, animi eum quis deserunt placeat exercitationem praesentium eaque at rerum aperiam soluta?</p>
                         </div>
-                        <h2>description</h2>
-                        <p class="description">
-                                {{recipe.description}}
-                        </p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo modi vel autem ducimus atque eligendi dolores repellat, temporibus, animi eum quis deserunt placeat exercitationem praesentium eaque at rerum aperiam soluta?</p>
                 </div>
                     <div class="gallery-action">
                         <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted" id="hearted_{{recipe.id}}">{% check_hearted recipe.id %}</i></a>
