--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -4,39 +4,32 @@ body {
   background-color: white;
   height: 1000px;
 }
-.icon-teal-lightest{
-  color:#80cbc4;
+
+icon-teal-lightest {
+  color: #80cbc4;
 }
 
-.link-teal-lightest{
-  color:#80cbc4;
+.link-teal-lightest {
+  color: #80cbc4;
   width: 60%;
   padding-top: 6px;
   padding-bottom: 6px;
-
-
 }
 
-.link-home{
-  color:#000000;
-
-
-
+.link-home {
+  color: #000000;
 }
 
-.icon-teal-dark{
-  color:#4db6ac;
+.icon-teal-dark {
+  color: #4db6ac;
 }
 
-.link-teal-dark{
-  color:#4db6ac;
+.link-teal-dark {
+  color: #4db6ac;
   width: 60%;
   padding-top: 6px;
   padding-bottom: 6px;
-
-
 }
-
 
 .Mnavbar {
   position: fixed;
@@ -146,7 +139,7 @@ body {
   transition: all 0.5s ease-in-out;
   z-index: 102;
 }
-#MainMenu #logo img {
+#MainMenu #logo {
   height: 75px;
   width: 75px;
   background-image: url("../img/user.png");
@@ -185,15 +178,14 @@ body {
 
 #close {
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   left: 50%;
   transform: translate(-50%);
-}
-#close img {
-  height: 30px;
-  width: 30px;
+  width: 60px;
+  height: 60px;
+  border: none !important;
   background-image: url("../img/Close.png");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
