--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -129,6 +129,29 @@ body {
   }
 }
 
+.pref_title {
+  margin: 0 auto;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.choices_container {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  height: 30vh;
+}
+.choices_container img {
+  width: 50%;
+  height: 50%;
+}
+.choices_container img:hover {
+  cursor: pointer;
+}
+
 .add_user {
   display: flex;
   align-items: center;
