--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -24,12 +24,12 @@
                 <div class="user_profile" id={{user.id}}>
                 </div>
                 <div class="prefences">
-                    <img class="prefences_img"src="../../static/main/img/cheese 2.svg">
-                    <img class="prefences_img"src="../../static/main/img/steak.svg">
-                    <img class="prefences_img"src="../../static/main/img/fast-food.svg">
-                    <img class="prefences_img"src="../../static/main/img/cupcake.svg">
-                    <img class="prefences_img"src="../../static/main/img/broccoli (1).svg">
-                    <img class="prefences_img"src="../../static/main/img/apple (1).svg">
+                    <img class="prefences_img"src="../../static/main/img/cheese2.svg">
+                    <img class="prefences_img"src="../../static/main/img/steak2.svg">
+                    <img class="prefences_img"src="../../static/main/img/fastfood2.svg">
+                    <img class="prefences_img"src="../../static/main/img/cupcake2.svg">
+                    <img class="prefences_img"src="../../static/main/img/broccoli2.svg">
+                    <img class="prefences_img"src="../../static/main/img/apple2.svg">
                 </div>
                 <div class='user_name'>
                         <h5 id={{user.id}} class="names">{{user.userName}}</h5>
@@ -81,11 +81,25 @@
             {% csrf_token %}
             <input type="text" placeholder="name" name="name" required>
             <input type="text" placeholder="age" name="age" required>
-            <input type="submit" value="Register" class="btn btn-secondary btn-block">
+            <div class="pref_title">
+                <div>
+                        <input type="submit" value="Add!" class="btn">
+                </div>
+                
+                <h3 class="pref_title">prefences</h3>
+            </div>
+            <div class="choices_container">
+                <img class="choices_img"src="../../static/main/img/cheese2.svg">
+                <img class="choices_img"src="../../static/main/img/steak2.svg">
+                <img class="choices_img"src="../../static/main/img/fastfood2.svg">
+                <img class="choices_img"src="../../static/main/img/cupcake2.svg">
+                <img class="choices_img"src="../../static/main/img/broccoli2.svg">
+                <img class="choices_img"src="../../static/main/img/apple2.svg">
+            </div>
         </form>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Confirm</a>
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat center">Close</a>
     </div>
 </div>
 
