search bar html

--- a/RecipeTop/main/static/main/scss/search.scss
+++ b/RecipeTop/main/static/main/scss/search.scss
@@ -26,7 +26,14 @@
   
 
 }
-
+.search_filters{
+  float:left;
+  width: 15%;
+}
+.cards-section{
+  float: left;
+  width: 85%;
+}
 .ingredients_table{
   width: 100%;
 }
