--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -6,10 +6,45 @@
 /*# sourceMappingURL=search.css.map */
 .ingredients_table{
   width: 100%;
+
+}
+.difficulty_button{
+  border: none;
+  background-color: inherit;
+  line-height: 15px;
+  padding: 0px 0px; 
+
+}
+.difficulty{
+  width:50%;
+  align:right;
+}
+.icon-grey{
+  color:#b0bec5;
+}
+.utensils{
+  line-height: 10px;
+}
+.ingredients{
+  line-height: 10px;
 }
 .container {
-  width: 80%;
-  height: 100;
+  width: 100%;
+  height: 100%;
+}
+.change_color{
+  color:#000000;
+}
+.search_filters{
+  float:left;
+  width: 25%;
+  border-right: 1px solid black;
+  padding: 10px;
+  height: 100%;
+}
+.cards-section{
+  float: left;
+  width: 75%;
 }
 .container .grid {
   display: grid;
