--- a/RecipeTop/main/static/main/scss/home.scss
+++ b/RecipeTop/main/static/main/scss/home.scss
@@ -70,3 +70,13 @@
     height:300px;
     width:60vw;
 }
+
+.side_container{
+    position:absolute;
+    height:100%;
+    width:60vw;
+    background:red;
+    top:25%;
+    right:5%;
+    color:blue;
+}
