--- a/RecipeTop/main/static/main/css/home.css
+++ b/RecipeTop/main/static/main/css/home.css
@@ -56,4 +56,14 @@
   width: 60vw;
 }
 
+.side_container {
+  position: absolute;
+  height: 100%;
+  width: 60vw;
+  background: red;
+  top: 25%;
+  right: 5%;
+  color: blue;
+}
+
 /*# sourceMappingURL=home.css.map */
