--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -10,7 +10,7 @@
 {% block content %}
 <br>
 <br>
-<div class="container">
+<!-- <div class="container">
     <div class="carousel">
     {% for recipe in recipes %}
         <a href="{% url 'follow_steps' recipe.id %}" class="carousel-item">
@@ -30,6 +30,16 @@
             </div>
     {% endfor %}
     </div>
+</div> -->
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="side_container">
+    hello
 </div>
+
 
 {% endblock %}
