--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -37,14 +37,17 @@
 }
 .search_filters{
   float:left;
-  width: 25%;
+  width: 20%;
   border-right: 1px solid black;
   padding: 10px;
-  height: 100%;
+  height: 95%;
+  overflow: scroll;
 }
 .cards-section{
   float: left;
-  width: 75%;
+  width: 80%;
+  height: 95%;
+  overflow: scroll;
 }
 .container .grid {
   display: grid;
