--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -34,7 +34,7 @@
                      		<div class="step-content">
                         		<div class="row">
                            			<div class="input-field">
-										<input type="text" name="title">
+										<input type="text" name="title" required>
 										<label for="title">Title</label>
 									</div>
                         		</div>
@@ -49,7 +49,7 @@
                      		<div class="step-content">
                         		<div class="row">
                            			<div class="input-field">
-										<input type="text" name="description">
+										<input type="text" name="description" required>
 										<label for="description">Description</label>
 									</div>
                         		</div>
@@ -98,12 +98,12 @@
 											<td>
 												<!-- <input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete"> -->
 												<div class="input-field">
-													<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete">
+													<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete" required>
 												</div>
 											</td>   
-											<td><input type="text" name="quantity" placeholder="Enter your quantity"></td>
+											<td><input type="text" name="quantity" placeholder="Enter your quantity" required></td>
 											<td class="input-field">
-												<select name="unit">
+												<select name="unit" required>
 													<option value="" disabled selected>Choose the unit</option>
 													<option value="1" name="">cup(s)</option>
 													<option value="2" name="">kg</option>
@@ -139,7 +139,7 @@
 											{% for utensil in utensils %}
 											<td>
 												<label>
-													<input type="checkbox" value="{{utensil}}" name="utensils"/>
+													<input type="checkbox" value="{{utensil}}" name="utensils" required/>
 													<span>{{utensil}}</span>
 												</label>
 											</td>
@@ -221,7 +221,7 @@
                         		<div class="row">	
 									<div class="time">
 										<p class="range-field">
-							      			<input type="range" name="time" min="0" max="120" step="5"/>
+							      			<input type="range" name="time" min="0" max="120" step="5" required/>
 							      		</p>
 									</div>
                         		</div>
