--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -86,7 +86,7 @@
                         <input type="submit" value="Add!" class="btn">
                 </div>
                 
-                <h3 class="pref_title">prefences</h3>
+                <h3 class="pref_title">preferences</h3>
             </div>
             <div class="choices_container">
                 <img class="choices_img"src="../../static/main/img/cheese2.svg">
