--- a/RecipeTop/main/static/main/scss/users.scss
+++ b/RecipeTop/main/static/main/scss/users.scss
@@ -93,9 +93,15 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
                 height:80%;
                 justify-items: center;
                 align-items: center;
+                .img1{
+                    align-self: end;
+                }
                 img{
                     width:50%;
-                    height:50%;
+                    height:40%;
+                }
+                .img2{
+                    align-self: start;
                 }
             }
 
@@ -193,21 +199,19 @@ box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
 .choices_container{
     display:grid;
     grid-template-columns: .5fr .5fr .5fr;
+    grid-template-rows: 100px 100px;
     justify-items: center;
     align-items: center;
     width:100%;
     height:30vh;
     img{
         width:50%;
-        height:50%;
+        height:40%;
         &:hover{
             cursor:pointer;
         }
     }
 }
-
-
-
 
 .add_user{
     display: flex;
