--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700,900i" rel="stylesheet">
     <link rel="stylesheet" href={% static "main/css/materialize.css" %}>
@@ -24,12 +24,12 @@
                 <div class="user_profile" id={{user.id}}>
                 </div>
                 <div class="prefences">
-                    <img class="prefences_img"src="../../static/main/img/cheese2.svg">
-                    <img class="prefences_img"src="../../static/main/img/steak2.svg">
-                    <img class="prefences_img"src="../../static/main/img/fastfood2.svg">
-                    <img class="prefences_img"src="../../static/main/img/cupcake2.svg">
-                    <img class="prefences_img"src="../../static/main/img/broccoli2.svg">
-                    <img class="prefences_img"src="../../static/main/img/apple2.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/cheese2.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/steak2.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/fastfood2.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/cupcake2.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/broccoli2.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/apple2.svg">
                 </div>
                 <div class='user_name'>
                         <h5 id={{user.id}} class="names">{{user.userName}}</h5>
