--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -9,17 +9,30 @@
 
 
 }
+#difficulty_table{
+  line-height: 15px;
+}
+#rating_table{
+  line-height: 15px;
+}
+#rating_container{
+  line-height: 10px;
+  padding: 0px 0px; 
+
+
+
+}
 .difficulty_button{
   border: none;
   background-color: inherit;
-  line-height: 15px;
+  line-height: 10px;
   padding: 0px 0px; 
 
 }
 .tags_container{
   width: 100%;
   overflow: scroll;
-  height:150px;
+  height:90px;
   line-height: 10px;
 
 }
