--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -198,12 +198,9 @@
                        </div>
                        <br>
                        <div class="ingredient_props">
-                           <div>
-                                <i class="material-icons">library_books</i>
-                                <!-- <span><i class="material-icons hearted ">note</i>steps:{{recipe.steps.all.count}}</span> -->
-                           </div>
-                            <div class="prop2"><i class="material-icons hearted">schedule</i></div>
-                            <div class="prop1"><i class="material-icons hearted ">local_dining</i></div>
+                            <div class="prop1"><i class="material-icons">library_books</i></div>
+                            <div class="prop2"><i class="material-icons">schedule</i></div>
+                            <div class="prop1"><i class="material-icons">local_dining</i></div>
                             <div class="prop2"><i class="material-icons hearted" id="hearted_{{recipe.id}}_prop">{% check_hearted recipe.id %}</i></div>
                        </div>
                     </div>
