--- a/RecipeTop/main/static/main/scss/search.scss
+++ b/RecipeTop/main/static/main/scss/search.scss
@@ -17,11 +17,7 @@
 
         display:grid;
         grid-template-columns: 1fr 1fr 1fr;
-        
         grid-column-gap: 5px;
-        
-
-    
     }
   
 
@@ -53,7 +49,7 @@
 .ingredient_props{
    display:grid;
    grid-template-columns: 1fr 1fr;
-   grid-column-gap: 40px;
+//    grid-column-gap: 40px;
 
 }
 
