Search bar stuff

--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -32,7 +32,7 @@
 .tags_container{
   width: 100%;
   overflow: scroll;
-  height:90px;
+  height:10%;
   line-height: 10px;
 
 }
@@ -50,12 +50,12 @@
 .utensils{
   line-height: 10px;
   overflow: scroll;
-  height:150px;
+  height:10%;
 }
 .ingredients{
   line-height: 10px;
   overflow: scroll;
-  height:150px;
+  height:10%;
 }
 .container {
   width: 100%;
