add user icons to models

--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -25,12 +25,12 @@
                 <div class="user_profile" id={{user.id}}>
                 </div>
                 <div class="prefences">
-                    <img class="prefences_img img1"src="../../static/main/img/cheese2.svg">
-                    <img class="prefences_img img1"src="../../static/main/img/steak2.svg">
-                    <img class="prefences_img img1"src="../../static/main/img/fastfood2.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/cupcake2.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/broccoli2.svg">
-                    <img class="prefences_img img2"src="../../static/main/img/apple2.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/cheese{{user.check_cheese}}.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/steak{{user.check_steak}}.svg">
+                    <img class="prefences_img img1"src="../../static/main/img/fastfood{{user.check_fastfood}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/cupcake{{user.check_cupcake}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/broccoli{{user.check_broccoli}}.svg">
+                    <img class="prefences_img img2"src="../../static/main/img/apple{{user.check_apple}}.svg">
                 </div>
                 <div class='user_name'>
                         <h5 id={{user.id}} class="names">{{user.userName}}</h5>
